bugfix for a wrongly assigned amountVisible

--- a/sass/partials/layout/_carousel.scss
+++ b/sass/partials/layout/_carousel.scss
@@ -6,18 +6,23 @@
 	li
 	{
 		display: block;
-		height: 200px;
 		width: 100%;
 		background-color: #f0f0f0;
 
-		@media screen and ( min-width: 800px )
+		>img
 		{
-			width: 33.33%;
+			display: block;
+			width: 100%;
 		}
 
-		@media screen and ( min-width: 1280px )
+		@media screen and ( min-width: 600px )
 		{
-			width: 25%;
+			width: 50%;
+		}
+
+		@media screen and ( min-width: 1200px )
+		{
+			width: 33.33%;
 		}
 	}
 }
@@ -34,7 +39,7 @@
 
 	&.hide
 	{
-		opacity: 0;
+		display: none;
 	}
 }
 
